--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>CoinController</servlet-name>
+    <servlet-class>coin.controller.CoinController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CoinController</servlet-name>
+    <url-pattern>/coincontroller</url-pattern>
+  </servlet-mapping>
 </web-app>
