--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,21 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>CoinFrontController</display-name>
+    <servlet-name>CoinFrontController</servlet-name>
+    <servlet-class>coin.controller.CoinFrontController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CoinFrontController</servlet-name>
+    <url-pattern>/coin</url-pattern>
+  </servlet-mapping>
+  
+  <resource-ref>
+    <description>Oracle Datasource example</description>
+    <res-ref-name>myoracle</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
