--- a/src/conf/sql.properties
+++ b/src/conf/sql.properties
@@ -6,4 +6,4 @@ addWallet3=insert into wallet values(?, 'DASH', 0, 0)
 addWallet4=insert into wallet values(?, 'LTC', 0, 0)
 addWallet5=insert into wallet values(?, 'ETC', 0, 0)
 addWallet6=insert into wallet values(?, 'XRP', 0, 0)
-
+getMember=select * from member where mid=?
