--- a/src/conf/sql.properties
+++ b/src/conf/sql.properties
@@ -1,4 +1,5 @@
 #sql.properties
-addBtc=insert into add values(?, ?, ?, ?)
+#addBtc=insert into btc values((timestamp '1970-01-01 00:00:00' + numtodsinterval(?/1000, 'SECOND'), ?, ?, ?)
+addBtc=insert into btc values (?,?,?,?)
 getBtc=select * from btc where day=?
 getAllBtc=select * from activist
