member 구조 변경 wallet 조회 수정 구현

--- a/src/conf/sql.properties
+++ b/src/conf/sql.properties
@@ -11,3 +11,5 @@ addWallet4=insert into wallet values(?, 'LTC', 0, 0)
 addWallet5=insert into wallet values(?, 'ETC', 0, 0)
 addWallet6=insert into wallet values(?, 'XRP', 0, 0)
 getMember=select * from member where mid=?
+getWalletCoin=select * from wallet where mid=?
+updateCoin=update wallet set amount=?, price=? where cname=? and mid=?
