--- a/src/conf/sql.properties
+++ b/src/conf/sql.properties
@@ -37,3 +37,5 @@ addWallet6=insert into wallet values(?, 'XRP', 0, 0)
 getMember=select * from member where mid=?
 getWalletCoin=select * from wallet where mid=?
 updateCoin=update wallet set amount=?, price=? where cname=? and mid=?
+getAllWalletAmount=select sum(amount) from wallet where mid=?
+getEachWalletAmount=select amount from wallet where mid=?
